--- a/src/components/jobs/Jobs.css
+++ b/src/components/jobs/Jobs.css
@@ -5,6 +5,6 @@
   }
   
 .jobs{
-  padding: 0px;
+  padding: 0px !important;
 
 }
